Update about me & minor css change

--- a/index.html
+++ b/index.html
@@ -1,157 +1,205 @@
 <!DOCTYPE html>
 
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ian Graham | Junior Software Developer</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ian Graham | Junior Software Developer</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" media="(max-width: 768px)" href="css/mobile.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/3e14ba6b53.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" media="(max-width: 768px)" href="css/mobile.css" />
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/3e14ba6b53.js" crossorigin="anonymous"></script>
-</head>
+  <body id="home">
+    <header class="hero">
+      <nav class="navbar">
+        <div class="logo">&nbsp;</div>
 
-<body id="home">
-  <header class="hero">
-    <nav class="navbar">
-      <div class="logo">&nbsp;</div>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
 
-      <a href="#" class="toggle-button">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </a>
+        <div class="navbar-links">
+          <ul>
+            <li><a href="#about"> About </a></li>
 
-      <div class="navbar-links">
-        <ul>
-          <li><a href="#about"> About </a></li>
+            <li><a href="#projects">Projects</a></li>
 
-          <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
 
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
+      <section class="hero-content">
+        <h1 class="hero-title">Ian Graham</h1>
 
-    <section class="hero-content">
-      <h1 class="hero-title">Ian Graham</h1>
+        <h2 class="hero-subtitle">Junior Software Developer</h2>
 
-      <h2 class="hero-subtitle">Junior Software Developer</h2>
+        <a class="btn" href="#about">About Me</a>
+      </section>
+    </header>
 
-      <a class="btn" href="#about">About Me</a>
-    </section>
-  </header>
-
-  <main class="main-content">
-    <article id="about">
-      <section class="about-info">
-        <div class="wrapper">
-          <div class="section-title-div">
-            <h2 class="section-title">About Me</h2>
-          </div>
-          <div class="about-info-content">
-            <figure>
-              <img class="profile-pic" src="./img/cropped-Ian2.jpg" width="500" height="500" alt="Ian Graham" />
-            </figure>
-            <div class="about-paragraphs">
-              <p>
-                Hello, my name is Ian. I'm a Junior Software Developer from
-                Rossendale, Lancashire in the UK. I currently have experience
-                in both front-end and back-end Web technologies and am always
-                actively learning new things.
-              </p>
-              <p>
-                Recently, I completed the 13-week long Software Engineering
-                bootcamp at Northcoders which taught me so many skills in such
-                a short amount of time.
-              </p>
-              <p>
-                I am now looking for the opportunity to further increase my
-                knowledge and experience, and am ready to apply myself and
-                begin a career as a Junior Developer.
-              </p>
+    <main class="main-content">
+      <article id="about">
+        <section class="about-info">
+          <div class="wrapper">
+            <div class="section-title-div">
+              <h2 class="section-title">About Me</h2>
+            </div>
+            <div class="about-info-content">
+              <figure>
+                <img
+                  class="profile-pic"
+                  src="./img/cropped-Ian2.jpg"
+                  width="500"
+                  height="500"
+                  alt="Ian Graham"
+                />
+              </figure>
+              <div class="about-paragraphs">
+                <p>
+                  Hello, my name is Ian and I’m a full-stack Software Developer
+                  based in Rossendale, Lancashire. I specialise in building
+                  intuitive and responsive web applications using modern
+                  JavaScript technologies, with experience across both frontend
+                  and backend development. I'm passionate about clean code,
+                  user-focused design, and continuously expanding my skill set.
+                </p>
+                <p>
+                  I recently completed a 13-week, full-time Software Engineering
+                  Bootcamp at Northcoders, where I gained hands-on experience
+                  with the PERN stack (PostgreSQL, Express, React, Node.js),
+                  test-driven development with Jest, and agile methodologies
+                  including pair programming. Since graduating, I’ve continued
+                  to build and refine full-stack applications, including
+                  projects such as <strong>Pawfect Events</strong> – a
+                  community-driven event platform created during a freelance
+                  placement – and <strong>FoodLogPro</strong>, a personal
+                  meal-tracking tool featuring secure user authentication.
+                </p>
+                <p>
+                  I am now actively seeking opportunities as a Junior Developer
+                  where I can apply my knowledge in a professional environment,
+                  contribute to meaningful projects, and grow as part of a
+                  collaborative team. I'm particularly excited to take on new
+                  challenges that push me to learn and improve, whether that's
+                  in a frontend, backend, or full-stack capacity.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="skills">
-        <div class="wrapper">
-          <div class="section-title-div">
-            <h2 class="section-title">My Skills</h2>
+        <section class="skills">
+          <div class="wrapper">
+            <div class="section-title-div">
+              <h2 class="section-title">My Skills</h2>
+            </div>
+
+            <div class="skill-icons js-skill-icons"></div>
           </div>
+        </section>
+      </article>
 
-          <div class="skill-icons js-skill-icons"></div>
-        </div>
-      </section>
-    </article>
+      <article id="projects">
+        <section class="projects-showcase">
+          <div class="wrapper">
+            <div class="section-title-div">
+              <h2 class="section-title">Projects Showcase</h2>
+            </div>
 
-    <article id="projects">
-      <section class="projects-showcase">
-        <div class="wrapper">
-          <div class="section-title-div">
-            <h2 class="section-title">Projects Showcase</h2>
+            <div class="js-projects-container"></div>
           </div>
+        </section>
+      </article>
 
-          <div class="js-projects-container"></div>
-        </div>
-      </section>
-    </article>
-
-    <article id="contact">
-      <section class="contact-section">
-        <div class="wrapper">
-          <div class="section-title-div">
-            <h2 class="section-title">Contact Me</h2>
+      <article id="contact">
+        <section class="contact-section">
+          <div class="wrapper">
+            <div class="section-title-div">
+              <h2 class="section-title">Contact Me</h2>
+            </div>
+            <div class="contact-form">
+              <form
+                target="_self"
+                action="https://formsubmit.co/i4ng1999@gmail.com"
+                method="POST"
+              >
+                <div class="form-group">
+                  <label for="name">Name:</label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    placeholder="Your name..."
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="email">Email Address:</label>
+                  <input
+                    type="text"
+                    name="email"
+                    id="email"
+                    placeholder="Your email..."
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="message">Your Message:</label>
+                  <textarea
+                    name="message"
+                    id="message"
+                    placeholder="Your message..."
+                  ></textarea>
+                </div>
+                <button type="submit" class="btn">Submit</button>
+              </form>
+            </div>
+            <h3>Or Message Me On...</h3>
+            <section class="social-icons">
+              <a
+                href="https://www.linkedin.com/in/ian-graham-357649223/"
+                target="_blank"
+              >
+                <i class="fa-brands fa-linkedin-in fa-3x"></i>
+                LinkedIn
+              </a>
+            </section>
           </div>
-          <div class="contact-form">
-            <form target="_self" action="https://formsubmit.co/i4ng1999@gmail.com" method="POST">
-              <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" name="name" id="name" placeholder="Your name..." required />
-              </div>
-              <div class="form-group">
-                <label for="email">Email Address:</label>
-                <input type="text" name="email" id="email" placeholder="Your email..." required />
-              </div>
-              <div class="form-group">
-                <label for="message">Your Message:</label>
-                <textarea name="message" id="message" placeholder="Your message..."></textarea>
-              </div>
-              <button type="submit" class="btn">Submit</button>
-            </form>
-          </div>
-          <h3>Or Message Me On...</h3>
-          <section class="social-icons">
-            <a href="https://www.linkedin.com/in/ian-graham-357649223/" target="_blank">
-              <i class="fa-brands fa-linkedin-in fa-3x"></i>
-              LinkedIn
-            </a>
-          </section>
-        </div>
-      </section>
-    </article>
-  </main>
+        </section>
+      </article>
+    </main>
 
-  <footer id="footer">
-    <a href="#home">
-      <i class="fa-solid fa-circle-arrow-up fa-2x" title="Back To Top"></i>
-    </a>
-    <p class="footer-text">Ian Graham &copy; 2025</p>
-
-    <div class="footer-social-icons">
-      <a href="https://www.linkedin.com/in/ian-graham-357649223/" target="_blank">
-        <i class="fa-brands fa-linkedin-in fa-2x"></i>
+    <footer id="footer">
+      <a href="#home">
+        <i class="fa-solid fa-circle-arrow-up fa-2x" title="Back To Top"></i>
       </a>
-      <a href="https://github.com/Iagrah99" target="_blank">
-        <i class="fa-brands fa-github fa-2x"></i>
-      </a>
-    </div>
-  </footer>
+      <p class="footer-text">Ian Graham &copy; 2025</p>
 
-  <script src="./scripts/index.js" type="module"></script>
-</body>
+      <div class="footer-social-icons">
+        <a
+          href="https://www.linkedin.com/in/ian-graham-357649223/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin-in fa-2x"></i>
+        </a>
+        <a href="https://github.com/Iagrah99" target="_blank">
+          <i class="fa-brands fa-github fa-2x"></i>
+        </a>
+      </div>
+    </footer>
 
+    <script src="./scripts/index.js" type="module"></script>
+  </body>
 </html>
