Add favicon and fix spacing in about section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ian Graham | Junior Software Developer</title>
+    <title>Ian Graham | Software Developer</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    <link rel="manifest" href="/img/site.webmanifest">
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" media="(max-width: 768px)" href="css/mobile.css" />
@@ -43,7 +47,7 @@
       <section class="hero-content">
         <h1 class="hero-title">Ian Graham</h1>
 
-        <h2 class="hero-subtitle">Junior Software Developer</h2>
+        <h2 class="hero-subtitle">Software Developer</h2>
 
         <a class="btn" href="#about">About Me</a>
       </section>
