Add animations to navbar and hero section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <h2 class="hero-subtitle">Software Developer</h2>
 
-        <a class="btn" href="#about">About Me</a>
+        <a class="btn hero-btn" href="#about">About Me</a>
       </section>
     </header>
 
