--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </article>
     </main>
 
-    <footer id="footer">
+    <footer id="footer" class="page-footer">
       <a href="#home">
         <i class="fa-solid fa-circle-arrow-up fa-2x" title="Back To Top"></i>
       </a>
