Improve animation timings on hero section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="navbar-links">
           <ul>
-            <li><a href="#about"> About </a></li>
+            <li><a href="#about">About</a></li>
 
             <li><a href="#projects">Projects</a></li>
 
@@ -45,7 +45,7 @@
       </nav>
 
       <section class="hero-content">
-        <h1 class="hero-title">Ian Graham</h1>
+        <h1 class="hero-title">Hi, I'm Ian <span class="wave">👋🏻</span></h1>
 
         <h2 class="hero-subtitle">Software Developer</h2>
 
