Add logo avatar on mobile screens

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body id="home">
     <header class="hero">
       <nav class="navbar">
-        <div class="logo">&nbsp;</div>
+        <div class="logo"><img src="/img/cropped-Ian2.jpg" width="500" height="500" alt="Logo"></div>
 
         <a href="#" class="toggle-button">
           <span class="bar"></span>
