Refactor About and Projects sections layout and styling

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ian Graham | Software Developer</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-    <link rel="manifest" href="/img/site.webmanifest">
+    <title>Ian Graham</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/img/site.webmanifest" />
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" media="(max-width: 1920px)" href="css/mobile.css" />
@@ -25,7 +39,14 @@
   <body id="home">
     <header class="hero">
       <nav class="navbar">
-        <div class="logo"><img src="/img/cropped-Ian2.jpg" width="500" height="500" alt="Logo"></div>
+        <div class="logo">
+          <img
+            src="/img/cropped-Ian2.jpg"
+            width="500"
+            height="500"
+            alt="Logo"
+          />
+        </div>
 
         <a href="#" class="toggle-button">
           <span class="bar"></span>
@@ -45,7 +66,7 @@
       </nav>
 
       <section class="hero-content">
-        <h1 class="hero-title">Hi, I'm Ian <span class="wave">👋🏻</span></h1>
+        <h1 class="hero-title">Hi, I'm  <span class="code-tag">&lt;</span> Ian <span class="code-tag">/ &gt;</span> <span class="wave">👋🏻</span></h1>
 
         <h2 class="hero-subtitle">Software Developer</h2>
 
@@ -59,46 +80,43 @@
           <div class="wrapper">
             <div class="section-title-div">
               <h2 class="section-title">About Me</h2>
+              <h3 class="section-subtitle">Learn a bit of information about me and my current skills.</h3>
             </div>
-            <div class="about-info-content">
-              <figure>
-                <img
-                  class="profile-pic"
-                  src="./img/cropped-Ian2.jpg"
-                  width="500"
-                  height="500"
-                  alt="Ian Graham"
-                />
-              </figure>
-              <div class="about-paragraphs">
-                <p>
-                  Hello, my name is Ian and I’m a full-stack Software Developer
-                  based in Rossendale, Lancashire. I specialise in building
-                  intuitive and responsive web applications using modern
-                  JavaScript technologies, with experience across both frontend
-                  and backend development. I'm passionate about clean code,
-                  user-focused design, and continuously expanding my skill set.
-                </p>
-                <p>
-                  I am now actively seeking opportunities as a Junior Developer
-                  where I can apply my knowledge in a professional environment,
-                  contribute to meaningful projects, and grow as part of a
-                  collaborative team. I'm particularly excited to take on new
-                  challenges that push me to learn and improve, whether that's
-                  in a frontend, backend, or full-stack capacity.
-                </p>
+            <div class="about-and-skills-info">
+              
+              <div class="about-info-content">
+                <figure>
+                  <img
+                    class="profile-pic"
+                    src="./img/cropped-Ian2.jpg"
+                    width="500"
+                    height="500"
+                    alt="Ian Graham"
+                  />
+                </figure>
+                <div class="about-paragraphs">
+                  <p>
+                    Hello, my name is Ian and I’m a full-stack Software
+                    Developer based in Rossendale, Lancashire. I specialise in
+                    building intuitive and responsive web applications using
+                    modern JavaScript technologies, with experience across both
+                    frontend and backend development. I'm passionate about clean
+                    code, user-focused design, and continuously expanding my
+                    skill set.
+                  </p>
+                  <p>
+                    I am now actively seeking opportunities as a Junior
+                    Developer where I can apply my knowledge in a professional
+                    environment, contribute to meaningful projects, and grow as
+                    part of a collaborative team. I'm particularly excited to
+                    take on new challenges that push me to learn and improve,
+                    whether that's in a frontend, backend, or full-stack
+                    capacity.
+                  </p>
+                </div>
               </div>
+              <div class="skill-icons js-skill-icons"></div>
             </div>
-          </div>
-        </section>
-
-        <section class="skills">
-          <div class="wrapper">
-            <div class="section-title-div">
-              <h2 class="section-title">My Skills</h2>
-            </div>
-
-            <div class="skill-icons js-skill-icons"></div>
           </div>
         </section>
       </article>
@@ -108,6 +126,7 @@
           <div class="wrapper">
             <div class="section-title-div">
               <h2 class="section-title">Projects Showcase</h2>
+              <h3 class="section-subtitle">Explore a few of the projects I’ve built — solo and in teams.</h3>
             </div>
 
             <div class="js-projects-container"></div>
@@ -120,6 +139,7 @@
           <div class="wrapper">
             <div class="section-title-div">
               <h2 class="section-title">Contact Me</h2>
+              <h3 class="section-subtitle">Have a project in mind? Let's connect!</h3>
             </div>
             <div class="contact-form">
               <form
