Add moving arrow to hero button

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <h2 class="hero-subtitle">Software Developer</h2>
 
-        <a class="btn hero-btn" href="#about">About Me</a>
+        <a class="btn hero-btn" href="#about"> <span class="about-arrow"><i class="fa-solid fa-chevron-right fa-1x"></i></span> About Me</a>
       </section>
     </header>
 
