Change to Junior Developer

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <section class="hero-content">
         <h1 class="hero-title">Hi, I'm  <span class="code-tag">&lt;</span> Ian <span class="code-tag">/ &gt;</span> <span class="wave">👋🏻</span></h1>
 
-        <h2 class="hero-subtitle">Software Developer</h2>
+        <h2 class="hero-subtitle">Junior Software Developer</h2>
 
         <a class="btn hero-btn" href="#about"> <span class="about-arrow"><i class="fa-solid fa-chevron-right fa-1x"></i></span> About Me</a>
       </section>
@@ -96,7 +96,7 @@
                 </figure>
                 <div class="about-paragraphs">
                   <p>
-                    Hello, my name is Ian and I’m a full-stack Software
+                    Hello, my name is Ian and I’m a junior full-stack Software
                     Developer based in Rossendale, Lancashire. I specialise in
                     building intuitive and responsive web applications using
                     modern JavaScript technologies, with experience across both
@@ -128,7 +128,6 @@
               <h2 class="section-title">Projects Showcase</h2>
               <h3 class="section-subtitle">Explore a few of the projects I’ve built — solo and in teams.</h3>
             </div>
-
             <div class="js-projects-container"></div>
           </div>
         </section>
