Implement particles.js animated background v1

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
   </head>
 
   <body id="home">
+    <canvas id="canvas1"></canvas>
     <header class="hero">
+      
       <nav class="navbar">
         <div class="logo">
           <img
@@ -64,6 +66,8 @@
           </ul>
         </div>
       </nav>
+
+      
 
       <section class="hero-content">
         <h1 class="hero-title">Hi, I'm  <span class="code-tag">&lt;</span> Ian <span class="code-tag">/ &gt;</span> <span class="wave">👋🏻</span></h1>
@@ -202,5 +206,6 @@
     </footer>
 
     <script src="./scripts/index.js" type="module"></script>
+    <script src="./scripts/particles.js" type="module"></script>
   </body>
 </html>
