--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <li><a href="#projects">Projects</a></li>
 
-            <li><a href="#contact">Contact</a></li>
+            <!-- <li><a href="#contact">Contact</a></li> -->
           </ul>
         </div>
       </nav>
@@ -137,7 +137,7 @@
         </section>
       </article>
 
-      <article id="contact">
+      <!-- <article id="contact">
         <section class="contact-section">
           <div class="wrapper">
             <div class="section-title-div">
@@ -183,7 +183,7 @@
             </div>
           </div>
         </section>
-      </article>
+      </article> -->
     </main>
 
     <footer id="footer" class="page-footer">
