Update portfolio header and contact text

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h1 class="hero-title">
               Hi, I'm <span class="code-tag">&lt;</span> Ian <span class="code-tag">/ &gt;</span> <span class="wave">👋🏻</span>
             </h1>
-            <h2 class="hero-subtitle">Junior Software Developer</h2>
+            <h2 class="hero-subtitle">Full-Stack Software Developer</h2>
             <a class="btn hero-btn" href="#about">
               <span class="about-arrow">
                 <i class="fa-solid fa-chevron-right fa-1x"></i>
@@ -111,7 +111,7 @@
               <div class="about-info-content">
                 <div class="about-paragraphs">
                   <p>
-                    Hello, I'm Ian — a junior full-stack Software Developer based in Rossendale, Lancashire. I specialise in building intuitive, responsive web applications using modern JavaScript technologies, with experience across both frontend and backend development.
+                    Hello, I'm Ian — a full-stack Software Developer based in Rossendale, Lancashire. I specialise in building intuitive, responsive web applications using modern JavaScript technologies, with experience across both frontend and backend development.
                   </p>
               
                   <ul>
@@ -119,7 +119,7 @@
                     <li>Strong understanding of full-stack development principles and MVC architecture.</li>
                     <li>Passionate about clean code, maintainable design, and mobile-first development.</li>
                     <li>Committed to delivering user-focused, accessible, and scalable solutions.</li>
-                    <li>Actively seeking Junior Developer roles to contribute to real-world projects, collaborate within a team, and grow as a developer.</li>
+                    <li>Actively seeking Junior/Mid-Level Developer roles to contribute to real-world projects, collaborate within a team, and grow as a developer.</li>
                     <li>Eager to take on challenges across frontend, backend, or full-stack development.</li>
                   </ul>
                 </div>
@@ -150,7 +150,7 @@
           <div class="wrapper">
             <div class="section-title-div">
               <h2 class="section-title">Contact Me</h2>
-              <h3 class="section-subtitle">Looking for a Junior Developer? I’d love to hear from you!</h3>
+              <h3 class="section-subtitle">Looking for a motivated Developer? I’d love to hear from you!</h3>
             </div>
             <div class="contact-form">
               <form
